--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,18 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
+name = "GubberBlump"
+
+[packages]
+opencv-python = "*"
+pyautogui = "*"
+numpy = "*"
+matplotlib = "*"
+pillow = "*"
+pyuserinput = "*"
+python-libinput = "*"
 
 [dev-packages]
 
-[packages]
-opencv-python = "==4.1.1.26"
-numpy = "==1.17.2"
-matplotlib = "==3.1.1"
-pillow = "==6.2.0"
-pyautogui = "==0.9.47"
-pymouse = "*"
-pyuserinput = "*"
-pywin32 = "*"
-
 [requires]
-python_version = "3.7"
+python_version = "3.9"
